Fixed white gap (caused by h1 element on 'Main' component) as well as updated some old links

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  color: black;
+  color: white;
 }
 
 
