--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,7 +1,12 @@
-#Main-Container {
+#Home-Container {
     margin-top: 0;
     width: 100vw;
     height: 150vh;
     background-image: url('./../../../assets/Background_Texture.png');
     background-repeat: repeat;
+    color: white;
+}
+
+#Home-Container h1 {
+    margin: 0;
 }
